# obs-h8819-source

./: CMakeLists.txt  README.md  azure-pipelines.yml
.github/files/: crowdin-template.yml  make-crowdin.sh
.github/workflows/: clang-format.yml  crowdin.yml  main.yml
ci/: forum-update-info.json
ci/linux/: install-dependencies-ubuntu.sh  package-ubuntu.sh
ci/macos/: obs-studio-build.patch  package-macos.sh
ci/windows/: install-npcap.sh
data/locale/: en-US.ini  ja-JP.ini
installer/: installer-Windows.iss.in  linux-setcap.sh.in
packaging/debian/: changelog  control  copyright  postinst  rules
packaging/debian/patches/: obs-h8819-proc-libexec.patch  series
packaging/fedora/: obs-studio-plugin-h8819-source.spec
src/: capdev-common.c  capdev-internal.h  capdev-nix.c  capdev-proc.c  capdev-proc.h  capdev-windows.c  capdev.c  capdev.h  common.h  pcap-dump-thread.cc  pcap-dump-thread.h  plugin-macros.h.in  plugin-main.c  source.c  source.h
src/wireshark/: capture_win_ifnames.c  capture_win_ifnames.h
test-onsdriver/: test_plugin_load.py
util/: h8819-pipe.h  pipe-posix.c  pipe-windows.c
